<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TvPal</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_stod2">Stöð 2</string>
    <string name="title_activity_display_ruv">Rúv</string>
    <string name="title_activity_display_skjarinn">Skjár Einn</string>
    <string name="title_activity_detailed_event">Event</string>
    <string name="loadingSchedule">Hleð dagskrá...</string>
    <string name="scheduleNotAvailable">Dagskrá ekki til...</string>
    <string name="starting_time">Byrjar</string>
    <string name="duration">Lengd</string>
    <string name="ruvBaseUrl"></string>
    <string name="stod2BaseUrl">http://www.stod2.is/XML--dagskrar-feed/XML-Stod-2-dagskra-vikunnar</string>
    <string name="stod2SportBaseUrl">http://www.stod2.is/XML--dagskrar-feed/XML-Stod-2-Sport-dagskra-vikunnar</string>
    <string name="stod3BaseUrl">http://www.stod2.is/XML--dagskrar-feed/XML-Stod-3-dagskra-vikunnar</string>
    <string name="stod2BioBaseUrl">http://www.stod2.is/XML--dagskrar-feed/XML-Stod-2-Bio-dagskra-vikunnar</string>
    <string name="stod">Stöð 2</string>
    <string name="skjarinn">Skjárinn</string>
    <string name="drawer_open">Opna tjald</string>
    <string name="drawer_close">Loka tjaldi</string>
    <string name="welcome_text">Welcome to TVPal</string>
    <string name="menu_remove_show">Remove Show</string>
    <string name="ruv">Rúv</string>
    <string name="stod_2">Stöð 2</string>
    <string name="stod_2_bio">Stöð 2 Bíó</string>
    <string name="stod_2_sport">Stöð 2 Sport</string>
    <string name="skjar_einn">Skjár einn</string>
    <string name="stod_3">Stöð 3</string>
    <string name="search_show">Search shows</string>
    <string name="my_shows">My shows</string>
    <string name="monday">Mán</string>
    <string name="tuesday">Þri</string>
    <string name="wednesday">Mið</string>
    <string name="thursday">Fim</string>
    <string name="friday">Fös</string>
    <string name="saturday">Lau</string>
    <string name="sunday">Sun</string>
    <string name="tvdbBaseUrl">http://thetvdb.com/api/GetSeries.php?seriesname=</string>
    <string name="loadingShows">Hleð þáttum...</string>
    <string name="title_activity_tv_show">Search</string>
    <string name="title_activity_my_shows">My Shows</string>
    <string name="title_activity_season">Seasons</string>
    <string name="title_activity_single_season">Season</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_episode">Episodes</string>
    <string name="emptyShows">You have not added any shows</string>
    <string name="title_activity_upcoming_shows">Upcoming &amp; Recent shows</string>
    <string name="upcoming_shows">Upcoming/Recent</string>
    <string name="title_activity_recent_shows">Recent shows</string>
    <string name="recent_shows">Recent shows</string>
    <string name="shows_header">Shows</string>
    <string name="schedule_header">Dagskrá</string>
    <string name="seen_all">Seen All Shows</string>
    <string name="update_show">Update Show</string>
    <string name="update_all">Update All Shows</string>
    <string name="seen_all_episodes">Seen All Episodes</string>
    <string name="seen_none">Seen None Shows</string>
    <string name="title_activity_show">ShowActivity</string>
    <string name="title_activity_trakt">TraktActivity</string>
    <string name="title_activity_search_shows">Search TV Shows</string>
    <string name="title_activity_cinema">Bíó sýningar</string>
    <string name="movieText">Movies</string>
    <string name="cinemaSchedules">Bíó sýningar</string>
    <string name="title_activity_trending_movies">Search Movies</string>
    <string name="trakt_search_movies">Search Movies</string>
    <string name="no_results">Couldn\'t find any schedules</string>
    <string name="trakt_nomovies">Couldn\'t load trending shows/movies</string>
    <string name="schedules_empty">Couldn\'t load schedules</string>
    <string name="title_activity_detailed_movie">Detailed Movie</string>
    <string name="DetailedMovieGenres">Genres</string>
    <string name="DetailedMovieRuntime">Runtime</string>
    <string name="DetailedMovieDirectors">Directors</string>
    <string name="DetailedMovieActors">Actors</string>
    <string name="DetailedMovieShowmore">More</string>
    <string name="DetailedMovieTrailer">Trailer</string>
    <string name="DetailedMovieImdb">Imdb</string>
    <string name="DetailedMovieTrakt">Trakt</string>
    <string name="DetailedMovieRating">Rating</string>
    <string name="DetailedMovieRelease">Release Year</string>
    <string name="episode_guest_stars">Guest Stars</string>
    <string name="label_episode_director">Director</string>
    <string name="label_episode_rating">Rating</string>
    <string name="trakt_nocomments">No comments available</string>
    <string name="trakt_comments">Comments</string>
    <string name="watchlist_movie">Add To Watchlist</string>
    <string name="watchlist">Watchlist</string>
    <string name="remove_movie">Remove Movie</string><string name="about_data">TVPal uses data from public websites:\nShows and Movies are powered by thetvdb.com and trakt.tv\nCinema schedules are powered by apis.is\nTV Schedules are powered by public Icelandic XML services</string>
    <string name="cinema_detailed_movie">Nánari upplýsingar</string>
    <string name="stod_2_sport2_baseurl">http://www.stod2.is/XML--dagskrar-feed/XML-Stod-2-Sport-2-dagskra-vikunnar</string>
    <string name="stod_2_sport2">Stöð 2 Sport 2</string>
    <string name="stod_2_gull">Stöð 2 Gull</string>
    <string name="stod2gullBaseUrl">http://www.stod2.is/XML--dagskrar-feed/XML-Stod-2-Extra-dagskra-vikunnar</string>
    <string name="trakt_watchlist">Add To Watchlist</string>
    <string name="related_movies">Related Movies</string>

</resources>
