<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <Button
            android:id="@+id/btnGetRuvSchedules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ruv"
            android:textSize="20sp"
            android:onClick="getSchedulesRuv_clickEvent"/>

        <Button
            android:id="@+id/btnGetStod2Schedules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnGetRuvSchedules"
            android:text="@string/stod"
            android:onClick="getSchedulesStod2_clickEvent" />

        <Button
            android:id="@+id/btnGetSkjarinnSchedules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnGetStod2Schedules"
            android:text="@string/skjarinn"
            android:onClick="getSchedulesSkjarinn_clickEvent" />


    </RelativeLayout>

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"/>

</android.support.v4.widget.DrawerLayout>
